# KaroSpaceCompanion

./: .gitignore  Cargo.toml  README.md
scripts/: bin_obs_numeric_to_tertiles.py  generate_runner.py  run_a_cell_atlas_of_the_developing_human_outflow_tract_of_the_heart_and_its_adult_ao_prepare_h5ad.sh  run_autism_315genes_prepare_h5ad.sh  run_autism_485genes_prepare_h5ad.sh  run_autism_prepare_h5ad.sh  run_balo_bms_export.sh  run_balo_bms_prepare_h5ad.sh  run_bbb1def5_fefb_44b6_a84b_65d59b9f9714_prepare_h5ad.sh  run_breast_breast_carcinoma_10_1038_s41588_021_00911_1_prepare_h5ad.sh  run_bruker_wtx_brain_prepare_h5ad.sh  run_bruker_wtx_kidney_prepare_h5ad.sh  run_bruker_wtx_pancreas_prepare_h5ad.sh  run_bruker_wtx_skin_prepare_h5ad.sh  run_cosmx_human_colon_full_prepare_h5ad.sh  run_cosmx_human_colon_prepare_h5ad.sh  run_dev_heart_combined_prepare_h5ad.sh  run_e13_20_fig3_prepare_h5ad.sh  run_e13_50_2_prepare_h5ad.sh  run_gadani_et_al_clustered_prepare_h5ad.sh  run_glioblastoma_prepare_h5ad.sh  run_glioblastoma_xenium_combined_analysis_prepare_h5ad.sh  run_gse236963_spatialeaemergeddatageo_2_prepare_h5ad.sh  run_gse248904_all_samples_hvg_ready_prepare_h5ad.sh  run_gse253710_processed_prepare_h5ad.sh  run_gse282203_combined_prepare_h5ad.sh  run_gse284005_merfish_all_prepare_h5ad.sh  run_gsm8677818_prepare_h5ad.sh  run_hindlimb_10_1038_s41586_023_06806_x_prepare_h5ad.sh  run_human_dev_meninges_prepare_h5ad.sh  run_human_meninges_prepare_h5ad.sh  run_human_visiumhd_prepare_h5ad.sh  run_label_mouse_all_concat_shared_genes_log1p_non3d_prepare_h5ad.sh  (+15 more)
src/: anndata.rs  lib.rs  (+6 more)
(+3 files in other folders)
