[package]
name = "karospace-companion"
version = "0.1.0"
edition = "2021"

[lib]
name = "karospace_companion"
path = "src/lib.rs"

[[bin]]
name = "karospace-companion"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
hdf5-metno = { version = "0.12.3", features = ["blosc"] }
ndarray = "0.17"
rand = "0.9"
rayon = "1.10"
rstar = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spade = "2.13"
